--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1 class="site-title wrapper">
-            <a href="#"><img src="C:\Users\yudai\Desktop\Mosya3\img\logo.svg"></a>
+            <a href="#"><img src="https://code-step.com/demo/html/blog/img/logo.svg"></a>
         </h1>
         <nav class="navi">
             <ul class="wrapper">
