--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                 <img src="https://code-step.com/demo/html/blog/img/author.jpg">
                 <h3 class="side-title">Name Name</h3>
                 <p class="profile">
-                  プロフィールテキストテキストテキストテキストテキストテキストテキスト
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  プロフィールテキスト
                 </p>
             </div>
             <div class="ranking">
